--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,65 +1,273 @@
+@import url('fonts.css');
+@import url('modern-normalize.css');
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
+:root {
+  --dark-sticky-header: #333333;
+}
+
+html {
+  font-size: 10px;
+  background-color: white
+}
+
 body {
-  margin: 0;
-  background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
+  background-color: rgb(252, 250, 247);
+  width: 90vw;
+  max-width: 950px;
+  margin: 1rem auto;
+  box-shadow: 0px 5px 5px 5px rgb(247, 246, 246);
+  padding: 3rem;
+}
+
+h1 {
+  font-family: 'Questa-Slab';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2.2rem;
+}
+
+h2 {
+  font-family: 'Work-Sans-Light';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 1.8rem;
+}
+h3 {
+  font-family: 'Work-Sans-Light';
+  font-style: normal;
+  font-weight: 200;
+  font-size: 1.2rem;
+}
+h4 {
+  font-family: 'Work-Sans-ExtraLight';
+  font-style: normal;
+  font-weight: 100;
+  font-size: 1.5rem;
+}
+
+p {
+  font-family: 'Work-Sans-Light';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 1.2rem;
+  line-height: 1.7rem;
+}
+
+a,
+.routerlink {
+  font-family: 'Work-Sans-Light';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 1.4rem;
+  color: #333333;
+}
+
+.dark-sticky-header {
+  height: 4rem;
+  background-color: var(--dark-sticky-header);
   display: flex;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  height: 100vh;
-  width: 100vw;
-  justify-content: center;
   align-items: center;
+  position: sticky;
+  top: 0;
+  width: 100vw;
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  color: white;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-ul {
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  margin: 8px 0;
-  border: 1px solid black;
-  gap: 1px;
-  background-color: black;
-  border-radius: 8px;
-  overflow: auto;
-}
-
+ul,
 li {
-  background-color: white;
-  padding: 8px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-li:hover {
-  background: #dadbf9;
+.photo-title-section {
+  display: flex;
 }
 
-a {
-  font-weight: 800;
-  text-decoration: none;
+.photo-title-pitch {
+  display: block;
+}
+
+.contact-header {
+  margin-top: 2rem;
+  text-align: left;
+}
+
+.experience-item {
+  padding-left: 1rem;
+  border-left: 0.2rem solid var(--dark-sticky-header);
+  margin: 2rem 0;
+}
+
+.project-description {
+  margin-bottom: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.project-item {
+  display: Block;
+  margin-bottom: 4rem;
+}
+
+.project-image-description {
+  margin-top: auto;
+}
+
+.project-img {
+  max-height: 30rem;
+  max-width: 30rem;
+  margin-right: 2rem;
+}
+
+.portfolio-img {
+  max-height: 7rem;
+  margin: 0.3rem;
+}
+.portfolio-imgs {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skills-grid-column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 0px;
+  width: 30rem;
+  margin: 0 auto;
+  align-items: baseline;
+}
+
+.skill-item {
+  margin: 2rem auto;
+  padding: 0;
+  text-align: center;
+}
+
+.project-portfolio {
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 800px) {
+body {
+  width: 80vw;
+}
+
+  .project-portfolio {
+    max-width: 60rem;
+    margin: 0 auto;
+  }
+
+  .project-description {
+    margin-bottom: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .project-item {
+    display: flex;
+    margin-bottom: 4rem;
+  }
+
+  .project-image-description {
+    margin-top: auto;
+  }
+
+  .project-img {
+    max-height: 40rem;
+    max-width: 40rem;
+    margin-right: 2rem;
+  }
+
+
+  .portfolio-grid-column {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    max-width: 80rem;
+    margin: 0 auto;
+  }
+
+  .skills-grid-column {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    width: 55rem;
+    margin: 0 auto;
+
+  }
+
+  .skill-item {
+    margin: 1rem auto;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .photo-title-pitch {
+    display: flex;
+    }
+
+  .contact-grid-column {
+    display: flex; 
+    max-width: 60rem;
+    margin: 0 auto;
+  }
+
+  .contact-header {
+    text-align: right;
+    margin-right: 0;
+    margin-left: auto;
+    margin-top: auto;
+    padding-right: 0.4rem;
+    border-right: 0.2rem solid var(--dark-sticky-header);
+    }
+}
+
+@media screen and (min-width: 992px) {
+  html {
+    font-size: 11px;
+  }
+
+  .project-portfolio {
+    margin: 0 auto;
+    max-width: 80rem;
+  }
+  .portfolio-grid-column {
+    margin: 0 2vw;
+  }
+
+  .skills-grid-column {
+    width: 75rem;
+  }
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  html {
+    background-color: black;
+  }
+
+  body {
+    background-color: #333333;
+    box-shadow: 0px 5px 5px 5px rgb(32, 32, 32);
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  p,
+  a,
+  li,
+  .routerlink {
+    color: white;
+  }
+
+  .experience-item {
+    border-left: 0.2rem solid white;
+  }
 }
